syntax = "proto3";
package user;

message User {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    int32 age = 4;
}

message CreateUserPayload {
    string first_name = 2;
    string last_name = 3;
    int32 age = 4;
}

message CreateUserResponse {
    string message = 1;
}

service UserService {
    rpc create_user(CreateUserPayload) returns (CreateUserResponse);
}
